//Here I will maintain documentation on version history so that you may read about new features and/or changes.
Developed by Spencer Douglas for use by Stephen Gould Indianapolis

BETA 2.7.1
	- Added basic scroll visual cue
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
BETA 2.7
	- Resolving a shipment now includes data about who did it/when it was resolved and gives the option to make a note about it when
	  it has been resolved
	- Added support for multiple lines in notes (previously did not format as expected)
	- Moved reset button
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
BETA 2.6
	- Added ability to remove and add paperwork to an existing appointents. This means are now fully editable...
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
BETA 2.5.5
	- Bigger calendar! 
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
BETA 2.5.4
	- Fixed bug where events with equal start and end times would be colored red 
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
BETA 2.5.3
	- Added paperwork management button (that doesn't work yet 🤪) 
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
BETA 2.5.2 
	- Moved reset truck scheduling form to right side of form so you don't bump it
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
BETA 2.5.1
	- Restyled edit window clear button to fit with rest of application