@@ -516,7 +516,7 @@
         <div class="modal-footer">
             <small id = "creator" style = "text-align: left;">Truck Scheduled by: </small>
             <small id="eventId" style = "display: none;"> Event ID Error</small>
-            <button type="button" class="btn btn-primary" id = "resolveShipmentBtn">Mark as Resolved</button>
+            <button type="button" class="btn btn-success" id = "resolveShipmentBtn">Mark as Resolved</button>
             <button type="button" class="btn btn-primary" id = "editInfoBtn" href = "#editModal">Edit Info</button>
             <button type="button" class="btn btn-danger" id = "deleteShipmentBtn">Cancel Truck</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
